feat(IOFactory): Added new methods for JSON creation, fixed docs and tweaks